--- a/tpl/app.html
+++ b/tpl/app.html
@@ -77,8 +77,8 @@
 
   <!-- footer -->
   <div class="app-footer wrapper b-t bg-light">
-    <span class="pull-right">{{app.version}} <a href ui-scroll="app" class="m-l-sm text-muted"><i class="fa fa-long-arrow-up"></i></a></span>
-    &copy; 2014 Copyright.
+    <span class="pull-right"> <a href ui-scroll="app" class="m-l-sm text-muted"><i class="fa fa-long-arrow-up"></i></a></span>
+    &copy; 2016 Copyright.
   </div>
   <!-- / footer -->
 
