--- a/tpl/blocks/aside_original.html
+++ b/tpl/blocks/aside_original.html
@@ -59,15 +59,15 @@
     <!-- aside footer -->
     <div class="wrapper m-t">
       <div class="text-center-folded">
-        <span class="pull-right pull-none-folded">9/10</span>
-        <span class="hidden-folded">Member</span>
+        <span class="pull-right pull-none-folded">60%</span>
+        <span class="hidden-folded" translate="aside.MILESTONE">Milestone</span>
       </div>
-      <progressbar value="90" class="progress-xxs m-t-sm dk" type="info"></progressbar>
+      <progressbar value="60" class="progress-xxs m-t-sm dk" type="info"></progressbar>
       <div class="text-center-folded">
-        <span class="pull-right pull-none-folded">100/1000 Mb</span>
-        <span class="hidden-folded">Document</span>
+        <span class="pull-right pull-none-folded">35%</span>
+        <span class="hidden-folded" translate="aside.RELEASE">Release</span>
       </div>
-      <progressbar value="10" class="progress-xxs m-t-sm dk" type="primary"></progressbar>
+      <progressbar value="35" class="progress-xxs m-t-sm dk" type="primary"></progressbar>
     </div>
     <!-- / aside footer -->
   </div>
