--- a/tpl/apps_weather.html
+++ b/tpl/apps_weather.html
@@ -40,9 +40,10 @@
         </div>
         <div class="col v-middle">
           <div class="h1">
-            <span class="text-2x text-white">{{ data.query.results.channel.item.condition.temp }}&deg;</span>            
+              <!--อาจเปลี่ยนหน่วยตรงนี้ได้-->
+            <span class="text-2x text-white">{{ data.query.results.channel.item.condition.temp  }}&deg;</span>            
           </div>
-          <span class="text-muted">{{ data.query.results.channel.item.condition.text }} - Feels like {{ data.query.results.channel.item.condition.temp }}&deg;</span>
+          <span class="text-muted">{{ data.query.results.channel.item.condition.text   }} - Feels like {{ data.query.results.channel.item.condition.temp }}&deg;</span>
         </div>
       </div>
     </div>
