--- a/tpl/mo/app_site.html
+++ b/tpl/mo/app_site.html
@@ -85,7 +85,7 @@
                                 <i class="icon-call-end block m-b-xs fa-2x"></i>
                                 <span>Call</span>
                             </a>
-                            <a href="" class="col padder-v text-muted b-r b-light">
+                            <a href="#/app/mylocation" class="col padder-v text-muted b-r b-light">
                                 <i class="icon-pointer block m-b-xs fa-2x"></i>
                                 <span>Location</span>
                             </a>
